architecture-references/multicluster-gateway-auth-policy/cluster1/cluster1-backend-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  annotations:
    linkerd.io/inject: enabled
