architecture-references/multicluster-gateway-auth-policy/cluster1/cluster1-emojivoto-deploy.yaml
# Description: This is a sample manifest file for deploying the emojivoto frontend service in a Kubernetes cluster.
# The frontend service is a web application that allows users to vote for their favorite emojis.
# The manifest file includes the following resources:
# - namespace called `emojivoto`
# - service accounts for the frontend service (web-svc) and traffic generator (vote-bot)
# - deployments for the web service and the vote-bot traffic generator
# The voting service is responsible for storing the votes and providing the current vote count.
# The web service is the frontend application that displays the emojis and allows users to vote.
---
apiVersion: v1
kind: Namespace
metadata:
  name: emojivoto
  annotations:
    linkerd.io/inject: enabled
---
# WEB-SVC FRONTEND SERVICE
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: emojivoto
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: web-svc
  type: ClusterIP
---
# WEB-SVC FRONTEND DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/version: v11
  name: web
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-svc
      version: v11
  template:
    metadata:
      labels:
        app: web-svc
        version: v11
    spec:
      containers:
      - env:
        - name: WEB_PORT
          value: "8080"
        - name: EMOJISVC_HOST
          value: emoji-svc.emojivoto:8080
        - name: VOTINGSVC_HOST
          value: voting-svc.emojivoto:8080
        - name: INDEX_BUNDLE
          value: dist/index_bundle.js
        image: docker.l5d.io/buoyantio/emojivoto-web:v11
        name: web-svc
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 100m
      serviceAccountName: web
---
# VOTE-BOT TRAFFIC GENERATOR DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: vote-bot
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/version: v11
  name: vote-bot
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-bot
      version: v11
  template:
    metadata:
      labels:
        app: vote-bot
        version: v11
    spec:
      containers:
      - command:
        - emojivoto-vote-bot
        image: docker.l5d.io/buoyantio/emojivoto-web:v11
        name: vote-bot
        resources:
          requests:
            cpu: 10m
      serviceAccountName: vote-bot
---
