architecture-references/multicluster-gateway-auth-policy/cluster1/cluster1-auth.yaml
# AuthorizationPolicy object for web service in emojivoto namespace
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  annotations:
    buoyant.io/created-by: linkerd policy generate
  name: web-http
  namespace: emojivoto
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: web-http
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: web-http
---
# HTTPRoute object for web service probe endpoints in emojivoto namespace
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: web-probes
  namespace: emojivoto
spec:
  parentRefs:
    - name: web-svc
      kind: Server
      group: policy.linkerd.io
      namespace: emojivoto
  rules:
    - matches:
      - path:
          value: "/live"
        method: GET
      - path:
          value: "/ready"
        method: GET
---
# AuthorizationPolicy object for web service probe endpoints in emojivoto namespace
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  annotations:
    buoyant.io/created-by: linkerd policy generate
  name: web-probes
  namespace: backend
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: NetworkAuthentication
    name: web-probes
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: web-probes
---
# AuthorizationPolicy object for client service in frontend namespace
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  annotations:
    buoyant.io/created-by: linkerd policy generate
  name: client-80
  namespace: frontend
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: client-80
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: client-80
---
#
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: client-probes
  namespace: frontend
spec:
  parentRefs:
    - name: client
      kind: Server
      group: policy.linkerd.io
      namespace: frontend
  rules:
    - matches:
      - path:
          value: "/live"
        method: GET
      - path:
          value: "/ready"
        method: GET
---
# AuthorizationPolicy object for client service probe endpoints in frontend namespace
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  annotations:
    buoyant.io/created-by: linkerd policy generate
  name: client-probes
  namespace: frontend
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: NetworkAuthentication
    name: client-probes
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: client-probes
---
# AuthorizationPolicy object for kong-gateway service in kong namespace
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  annotations:
    buoyant.io/created-by: linkerd policy generate
  name: kong-gateway-admin-tls
  namespace: kong
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: kong-gateway-admin-tls
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: kong-gateway-admin-tls
---
# apiVersion: policy.linkerd.io/v1alpha1
# kind: NetworkAuthentication
# metadata:
#   annotations:
#     buoyant.io/created-by: linkerd policy generate
#   name: kong-gateway-admin-tls-allow
#   namespace: kong
# spec:
#   networks:
#   - cidr: 0.0.0.0/0
# ---
# apiVersion: policy.linkerd.io/v1alpha1
# kind: AuthorizationPolicy
# metadata:
#   annotations:
#     buoyant.io/created-by: linkerd policy generate
#   name: kong-gateway-admin-tls-allow
#   namespace: kong
# spec:
#   requiredAuthenticationRefs:
#   - group: policy.linkerd.io
#     kind: NetworkAuthentication
#     name: kong-gateway-admin-tls-allow
#   targetRef:
#     group: policy.linkerd.io
#     kind: Server
#     name: kong-gateway-admin-tls
